added fullpagescreenshot capabilities, wip on fire-engine side
